// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check that link action creators generate proper action objects and perform checking addLink 1`] = `
Array [
  Object {
    "data": Object {},
    "graphicalAttributes": Object {
      "selected": true,
    },
    "linkId": "linkId",
    "sourceId": "sourceId",
    "targetId": "targetId",
    "type": "FLOWDESIGNER_LINK_ADD",
  },
]
`;

exports[`Check that link action creators generate proper action objects and perform checking removeLink 1`] = `
Array [
  Object {
    "linkId": "id",
    "type": "FLOWDESIGNER_LINK_REMOVE",
  },
]
`;

exports[`Check that link action creators generate proper action objects and perform checking removeLinkData 1`] = `
Array [
  Object {
    "dataKey": "type",
    "linkId": "id",
    "type": "FLOWDESIGNER_LINK_REMOVE_DATA",
  },
]
`;

exports[`Check that link action creators generate proper action objects and perform checking removeLinkGrahicalAttribute 1`] = `
Array [
  Object {
    "graphicalAttributesKey": "selected",
    "linkId": "id",
    "type": "FLOWDESIGNER_LINK_REMOVE_GRAPHICAL_ATTRIBUTES",
  },
]
`;

exports[`Check that link action creators generate proper action objects and perform checking setLinkData 1`] = `
Array [
  Object {
    "data": Object {
      "type": "test",
    },
    "linkId": "id",
    "type": "FLOWDESIGNER_LINK_SET_DATA",
  },
]
`;

exports[`Check that link action creators generate proper action objects and perform checking setLinkGraphicalAttributes 1`] = `
Array [
  Object {
    "graphicalAttributes": Object {
      "selected": true,
    },
    "linkId": "id",
    "type": "FLOWDESIGNER_LINK_SET_GRAPHICAL_ATTRIBUTES",
  },
]
`;

exports[`Check that link action creators generate proper action objects and perform checking setLinkSource 1`] = `
Array [
  Object {
    "linkId": "linkId",
    "sourceId": "portId",
    "type": "FLOWDESIGNER_LINK_SET_SOURCE",
  },
]
`;

exports[`Check that link action creators generate proper action objects and perform checking setLinkTarget 1`] = `
Array [
  Object {
    "linkId": "linkId",
    "targetId": "portId",
    "type": "FLOWDESIGNER_LINK_SET_TARGET",
  },
]
`;
